--- a/Skull_IA V1/templates/index.html
+++ b/Skull_IA V1/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site test</title>
+    <title>Skull IA</title>
 </head>
 <body style="text-align: center;">
     <h1>Digite sua frase:</h1>
